--- a/styles/index.css
+++ b/styles/index.css
@@ -13,3 +13,28 @@
 /* Stop purging. */
 
 /* Your own custom utilities */
+
+@layer components {
+    .input-blue {
+        @apply focus:ring-blue-500 focus:border-blue-500 block w-full pl-7 pr-12 sm:text-sm border-gray-300 rounded-md;
+    }
+    .input-indigo {
+        @apply focus:ring-blue-500 focus:border-indigo-500 block w-full pl-7 pr-12 sm:text-sm border-gray-300 rounded-md;
+    }
+
+    .btn-blue-outline {
+        @apply focus:ring-2 focus:ring-blue-500 text-blue-500 sm:text-sm font-medium hover:text-blue-700 px-4 py-2 ;
+    }
+
+    .btn-blue-filled {
+        @apply focus:ring-2 focus:ring-blue-500 text-blue-500 sm:text-sm font-medium hover:text-blue-600 px-4 py-2 bg-blue-100 hover:bg-blue-200 rounded-md;
+    }
+
+    .btn-indigo-outline {
+        @apply focus:ring-2 focus:ring-blue-500 text-indigo-500 sm:text-sm font-medium hover:text-indigo-700 px-4 py-2 ;
+    }
+
+    .btn-indigo-filled {
+        @apply focus:ring-2 focus:ring-indigo-500 text-indigo-500 sm:text-sm font-medium hover:text-indigo-600 px-4 py-2 bg-indigo-100 hover:bg-indigo-200 rounded-md;
+    }
+}
